--- a/cookbooks/cloud_monitoring/templates/default/confd/cpu.yaml.erb
+++ b/cookbooks/cloud_monitoring/templates/default/confd/cpu.yaml.erb
@@ -7,6 +7,7 @@ alarms:
         label: CPU usage
         notification_plan_id: <%= @notification_plan_id %>
         criteria: |
+            :set consecutiveCount = 2
             if (metric['usage_average'] > 95) {
               return new AlarmStatus(CRITICAL, 'CPU usage is #{usage_average}%, above your critical threshold of 95%');
             }
